k8s-manifests/base/network-policy.yaml
# =============================================================================
# Base — Network Policy (restrict traffic to order-service-api)
# =============================================================================

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: order-service-api-netpol
spec:
  podSelector:
    matchLabels:
      app: order-service-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: redis-statefulset
      ports:
        - protocol: TCP
          port: 6379
    - to: []
      ports:
        - protocol: TCP
          port: 443
